--- a/dae_conftests/dae_conftests/tests/fixtures/test_repo/gene_scores/LGD/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/test_repo/gene_scores/LGD/index.html
@@ -20,6 +20,10 @@ h3,h4 {
 <tr><td><b>Id:</b></td><td>gene_scores/LGD</td></tr>
 <tr><td><b>Type:</b></td><td>gene_score</td></tr>
 <tr>
+<td><b>Summary:</b></td>
+<td>N/A</td>
+</tr>
+<tr>
 <td><b>Description:</b></td>
 <td>N/A</td>
 </tr>
@@ -54,6 +58,7 @@ LGD.csv
 
 <h3>Histograms:</h2>
 
+
 <div class="histogram">
 <h4>LGD_rank</h1>
 <img src="statistics/histogram_LGD_rank.png"
@@ -62,6 +67,8 @@ alt=LGD_rank
 title=LGD_rank>
 </div>
 
+
+
 <div class="histogram">
 <h4>LGD_score</h1>
 <img src="statistics/histogram_LGD_score.png"
@@ -69,6 +76,7 @@ width="200px"
 alt=LGD_score
 title=LGD_score>
 </div>
+
 
 
 
@@ -94,15 +102,8 @@ title=LGD_score>
         <td class="nowrap">
             <a href='genomic_resource.yaml'>genomic_resource.yaml</a>
         </td>
-        <td class="nowrap">281.0 B</td>
-        <td class="nowrap">4423a8d1d963bfa444cf1777d95b460a</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='index.html'>index.html</a>
-        </td>
-        <td class="nowrap">1.55 KB</td>
-        <td class="nowrap">77266ddc5cf8f8dfdda2afefc08776ec</td>
+        <td class="nowrap">336.0 B</td>
+        <td class="nowrap">558068485b8e3fe4911db03dad2dd6f3</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -115,8 +116,8 @@ title=LGD_score>
         <td class="nowrap">
             <a href='statistics/histogram_LGD_rank.yaml'>statistics/histogram_LGD_rank.yaml</a>
         </td>
-        <td class="nowrap">3.53 KB</td>
-        <td class="nowrap">011ea16ea769a60312d00654a9d84759</td>
+        <td class="nowrap">3.96 KB</td>
+        <td class="nowrap">f937cd1513e17676ec913e8b1abbf16e</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -129,22 +130,22 @@ title=LGD_score>
         <td class="nowrap">
             <a href='statistics/histogram_LGD_score.yaml'>statistics/histogram_LGD_score.yaml</a>
         </td>
-        <td class="nowrap">3.74 KB</td>
-        <td class="nowrap">9f210ba8984fa67be2fd93c9f4ea6be9</td>
+        <td class="nowrap">4.17 KB</td>
+        <td class="nowrap">5b2a09a55aadc4fe42fac8f69e2f806d</td>
     </tr>
     <tr>
         <td class="nowrap">
             <a href='statistics/stats_hash'>statistics/stats_hash</a>
         </td>
-        <td class="nowrap">513.0 B</td>
-        <td class="nowrap">285aa88ed074d67fe06bca1704c4e35f</td>
+        <td class="nowrap">313.0 B</td>
+        <td class="nowrap">aeef3ef0f999c646a0b96aab997b52ac</td>
     </tr>
     <tr>
         <td class="nowrap">
             <a href='tasks-log/log_gene_scores_LGD_LGD_rank_calc_histogram.log'>tasks-log/log_gene_scores_LGD_LGD_rank_calc_histogram.log</a>
         </td>
-        <td class="nowrap">1.49 KB</td>
-        <td class="nowrap">b2decb0d0dbd6da76ecc85a210c753fe</td>
+        <td class="nowrap">0B</td>
+        <td class="nowrap">d41d8cd98f00b204e9800998ecf8427e</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -157,8 +158,8 @@ title=LGD_score>
         <td class="nowrap">
             <a href='tasks-log/log_gene_scores_LGD_LGD_score_calc_histogram.log'>tasks-log/log_gene_scores_LGD_LGD_score_calc_histogram.log</a>
         </td>
-        <td class="nowrap">1.49 KB</td>
-        <td class="nowrap">35407b0542a9a8e017a5375dff8546da</td>
+        <td class="nowrap">0B</td>
+        <td class="nowrap">d41d8cd98f00b204e9800998ecf8427e</td>
     </tr>
     <tr>
         <td class="nowrap">
