--- a/dae_conftests/dae_conftests/tests/fixtures/test_repo/gene_scores/RVIS/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/test_repo/gene_scores/RVIS/index.html
@@ -20,6 +20,10 @@ h3,h4 {
 <tr><td><b>Id:</b></td><td>gene_scores/RVIS</td></tr>
 <tr><td><b>Type:</b></td><td>gene_score</td></tr>
 <tr>
+<td><b>Summary:</b></td>
+<td>N/A</td>
+</tr>
+<tr>
 <td><b>Description:</b></td>
 <td>N/A</td>
 </tr>
@@ -54,6 +58,7 @@ RVIS.csv
 
 <h3>Histograms:</h2>
 
+
 <div class="histogram">
 <h4>RVIS_rank</h1>
 <img src="statistics/histogram_RVIS_rank.png"
@@ -62,6 +67,8 @@ alt=RVIS_rank
 title=RVIS_rank>
 </div>
 
+
+
 <div class="histogram">
 <h4>RVIS</h1>
 <img src="statistics/histogram_RVIS.png"
@@ -69,6 +76,7 @@ width="200px"
 alt=RVIS
 title=RVIS>
 </div>
+
 
 
 
@@ -94,15 +102,8 @@ title=RVIS>
         <td class="nowrap">
             <a href='genomic_resource.yaml'>genomic_resource.yaml</a>
         </td>
-        <td class="nowrap">270.0 B</td>
-        <td class="nowrap">92b8c7d9713f7df8cf1ef5f33c2b74ec</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='index.html'>index.html</a>
-        </td>
-        <td class="nowrap">1.53 KB</td>
-        <td class="nowrap">1aee1229b42ec5ac11c614d51a72ae2d</td>
+        <td class="nowrap">329.0 B</td>
+        <td class="nowrap">23c9655d86de1c4285bb449f2127eeb0</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -115,8 +116,8 @@ title=RVIS>
         <td class="nowrap">
             <a href='statistics/histogram_RVIS.yaml'>statistics/histogram_RVIS.yaml</a>
         </td>
-        <td class="nowrap">2.49 KB</td>
-        <td class="nowrap">c121ea617ea48c516682be8f90ebaa1d</td>
+        <td class="nowrap">2.92 KB</td>
+        <td class="nowrap">a93e9b529df82b3e809e69e521c81ce9</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -129,29 +130,29 @@ title=RVIS>
         <td class="nowrap">
             <a href='statistics/histogram_RVIS_rank.yaml'>statistics/histogram_RVIS_rank.yaml</a>
         </td>
-        <td class="nowrap">3.09 KB</td>
-        <td class="nowrap">e1a9fe2510f0299e5ae68a49873ab5b9</td>
+        <td class="nowrap">3.53 KB</td>
+        <td class="nowrap">2135dc2f0a2dec74bf16952b2c0ac60f</td>
     </tr>
     <tr>
         <td class="nowrap">
             <a href='statistics/stats_hash'>statistics/stats_hash</a>
         </td>
-        <td class="nowrap">501.0 B</td>
-        <td class="nowrap">b090c7875555a9df23d91a0f5d61ab40</td>
+        <td class="nowrap">292.0 B</td>
+        <td class="nowrap">7a94f5b8191588fa0e18dfc994d4858f</td>
     </tr>
     <tr>
         <td class="nowrap">
             <a href='tasks-log/log_gene_scores_RVIS_RVIS_calc_histogram.log'>tasks-log/log_gene_scores_RVIS_RVIS_calc_histogram.log</a>
         </td>
-        <td class="nowrap">1.49 KB</td>
-        <td class="nowrap">9b274eafb240e765bac3216fd67cfad3</td>
+        <td class="nowrap">0B</td>
+        <td class="nowrap">d41d8cd98f00b204e9800998ecf8427e</td>
     </tr>
     <tr>
         <td class="nowrap">
             <a href='tasks-log/log_gene_scores_RVIS_RVIS_rank_calc_histogram.log'>tasks-log/log_gene_scores_RVIS_RVIS_rank_calc_histogram.log</a>
         </td>
-        <td class="nowrap">1.5 KB</td>
-        <td class="nowrap">5f4c43c652e087d71809ea997079430a</td>
+        <td class="nowrap">0B</td>
+        <td class="nowrap">d41d8cd98f00b204e9800998ecf8427e</td>
     </tr>
     <tr>
         <td class="nowrap">
