--- a/dae_conftests/dae_conftests/tests/fixtures/test_repo/gene_scores/SFARI_gene_score/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/test_repo/gene_scores/SFARI_gene_score/index.html
@@ -20,6 +20,10 @@ h3,h4 {
 <tr><td><b>Id:</b></td><td>gene_scores/SFARI_gene_score</td></tr>
 <tr><td><b>Type:</b></td><td>gene_score</td></tr>
 <tr>
+<td><b>Summary:</b></td>
+<td>N/A</td>
+</tr>
+<tr>
 <td><b>Description:</b></td>
 <td>N/A</td>
 </tr>
@@ -49,6 +53,7 @@ SFARI.csv
 
 <h3>Histograms:</h2>
 
+
 <div class="histogram">
 <h4>SFARI_gene_score</h1>
 <img src="statistics/histogram_SFARI_gene_score.png"
@@ -56,6 +61,7 @@ width="200px"
 alt=SFARI_gene_score
 title=SFARI_gene_score>
 </div>
+
 
 
 
@@ -81,15 +87,8 @@ title=SFARI_gene_score>
         <td class="nowrap">
             <a href='genomic_resource.yaml'>genomic_resource.yaml</a>
         </td>
-        <td class="nowrap">195.0 B</td>
-        <td class="nowrap">11098dda9a1c54fafb1d06209bdd7d4b</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='index.html'>index.html</a>
-        </td>
-        <td class="nowrap">1.38 KB</td>
-        <td class="nowrap">44ee0f8784b3f665241d30e00ea619fb</td>
+        <td class="nowrap">205.0 B</td>
+        <td class="nowrap">3892185823463e11633de27c9fd51bab</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -102,22 +101,22 @@ title=SFARI_gene_score>
         <td class="nowrap">
             <a href='statistics/histogram_SFARI_gene_score.yaml'>statistics/histogram_SFARI_gene_score.yaml</a>
         </td>
-        <td class="nowrap">218.0 B</td>
-        <td class="nowrap">446534f6151dbb33e9a1a2da3888a940</td>
+        <td class="nowrap">263.0 B</td>
+        <td class="nowrap">1e5c777e9d9607b6a9e9bae61096d808</td>
     </tr>
     <tr>
         <td class="nowrap">
             <a href='statistics/stats_hash'>statistics/stats_hash</a>
         </td>
-        <td class="nowrap">341.0 B</td>
-        <td class="nowrap">ea9d9faebe2737f8860f69041889f946</td>
+        <td class="nowrap">208.0 B</td>
+        <td class="nowrap">aca6abd4ebeea88dc241bc2880123303</td>
     </tr>
     <tr>
         <td class="nowrap">
             <a href='tasks-log/log_gene_scores_SFARI_gene_score_SFARI_gene_score_calc_histogram.log'>tasks-log/log_gene_scores_SFARI_gene_score_SFARI_gene_score_calc_histogram.log</a>
         </td>
-        <td class="nowrap">1.54 KB</td>
-        <td class="nowrap">3e9f485316ebf6c9a31ed565c1e849ff</td>
+        <td class="nowrap">0B</td>
+        <td class="nowrap">d41d8cd98f00b204e9800998ecf8427e</td>
     </tr>
     <tr>
         <td class="nowrap">
