Run grr_manage repo-repair on fixture GRR repository.

--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/CADD/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/CADD/index.html
@@ -20,6 +20,10 @@ h3,h4 {
 <tr><td><b>Id:</b></td><td>hg19/CADD</td></tr>
 <tr><td><b>Type:</b></td><td>np_score</td></tr>
 <tr>
+<td><b>Summary:</b></td>
+<td>N/A</td>
+</tr>
+<tr>
 <td><b>Description:</b></td>
 <td>N/A</td>
 </tr>
@@ -68,8 +72,7 @@ h3,h4 {
     title=cadd_raw
     width="200"></td>
 
-<td>
-(-3.669, 15.616)</td>
+<td>(-3.669, 15.616)</td>
 
 </tr><tr class="score-definition">
 
@@ -91,8 +94,7 @@ h3,h4 {
     title=cadd_phred
     width="200"></td>
 
-<td>
-(0.001, 52.000)</td>
+<td>(0.001, 52.000)</td>
 
 </tr>
 
@@ -143,8 +145,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/histogram_cadd_phred.yaml'>statistics/histogram_cadd_phred.yaml</a>
         </td>
-        <td class="nowrap">2.31 KB</td>
-        <td class="nowrap">9571aa54582ef2c7c1ceaf6a95f8191d</td>
+        <td class="nowrap">2.32 KB</td>
+        <td class="nowrap">222dd13d1904ba5289788b4f48ba3ca9</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -157,8 +159,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/histogram_cadd_raw.yaml'>statistics/histogram_cadd_raw.yaml</a>
         </td>
-        <td class="nowrap">2.5 KB</td>
-        <td class="nowrap">076277e0cf9716018a1f70d75d3a801e</td>
+        <td class="nowrap">2.52 KB</td>
+        <td class="nowrap">fd97baa38225f9b890986f09fb27b17b</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -178,8 +180,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/stats_hash'>statistics/stats_hash</a>
         </td>
-        <td class="nowrap">1.05 KB</td>
-        <td class="nowrap">593070197a0546c434e1ec2ad51c8d41</td>
+        <td class="nowrap">1.17 KB</td>
+        <td class="nowrap">d450c6b06e3113b2837a23682a416ce2</td>
     </tr>
 </tbody>
 </table>
