--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/GATK_ResourceBundle_5777_b37_phiX174_short/genome/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/GATK_ResourceBundle_5777_b37_phiX174_short/genome/index.html
@@ -20,6 +20,13 @@ h3,h4 {
 <tr><td><b>Id:</b></td><td>hg19/GATK_ResourceBundle_5777_b37_phiX174_short/genome</td></tr>
 <tr><td><b>Type:</b></td><td>genome</td></tr>
 <tr>
+<td><b>Summary:</b></td>
+<td>## HG19 Reference Genome Fragment
+
+Default HG19 reference genome used by GPF
+</td>
+</tr>
+<tr>
 <td><b>Description:</b></td>
 <td><h2>HG19 Reference Genome Fragment</h2>
 
