--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/MPC/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/MPC/index.html
@@ -20,6 +20,10 @@ h3,h4 {
 <tr><td><b>Id:</b></td><td>hg19/MPC</td></tr>
 <tr><td><b>Type:</b></td><td>np_score</td></tr>
 <tr>
+<td><b>Summary:</b></td>
+<td>N/A</td>
+</tr>
+<tr>
 <td><b>Description:</b></td>
 <td>N/A</td>
 </tr>
@@ -68,8 +72,7 @@ h3,h4 {
     title=MPC
     width="200"></td>
 
-<td>
-(0.039, 4.618)</td>
+<td>(0.039, 4.618)</td>
 
 </tr>
 
@@ -106,8 +109,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='genomic_resource.yaml'>genomic_resource.yaml</a>
         </td>
-        <td class="nowrap">655.0 B</td>
-        <td class="nowrap">cbb98947a53e033d591219f8494a9d24</td>
+        <td class="nowrap">672.0 B</td>
+        <td class="nowrap">7dee634d0701a4801871d6c93be44b88</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -141,8 +144,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/histogram_MPC.yaml'>statistics/histogram_MPC.yaml</a>
         </td>
-        <td class="nowrap">1.77 KB</td>
-        <td class="nowrap">647f2366ca7712640b233ead7e929525</td>
+        <td class="nowrap">1.79 KB</td>
+        <td class="nowrap">d391ac8dbe9e48d56d3bfb569d9487db</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -155,8 +158,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/stats_hash'>statistics/stats_hash</a>
         </td>
-        <td class="nowrap">945.0 B</td>
-        <td class="nowrap">97880225bbd11b94ad6475a32b76c25f</td>
+        <td class="nowrap">4.81 KB</td>
+        <td class="nowrap">ea5c8c01e4be4ddd9459e4e8fe3581c2</td>
     </tr>
 </tbody>
 </table>
