--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/internal/scores1/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/internal/scores1/index.html
@@ -20,6 +20,10 @@ h3,h4 {
 <tr><td><b>Id:</b></td><td>hg19/internal/scores1</td></tr>
 <tr><td><b>Type:</b></td><td>position_score</td></tr>
 <tr>
+<td><b>Summary:</b></td>
+<td>N/A</td>
+</tr>
+<tr>
 <td><b>Description:</b></td>
 <td>N/A</td>
 </tr>
@@ -68,8 +72,7 @@ h3,h4 {
     title=score0
     width="200"></td>
 
-<td>
-(865582.000, 195966607.000)</td>
+<td>(865582.000, 195966607.000)</td>
 
 </tr><tr class="score-definition">
 
@@ -91,8 +94,7 @@ h3,h4 {
     title=score2
     width="200"></td>
 
-<td>
-(8655.820, 1959666.070)</td>
+<td>(8655.820, 1959666.070)</td>
 
 </tr><tr class="score-definition">
 
@@ -114,8 +116,7 @@ h3,h4 {
     title=score4
     width="200"></td>
 
-<td>
-(86.558, 19596.661)</td>
+<td>(86.558, 19596.661)</td>
 
 </tr>
 
@@ -180,8 +181,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/histogram_score0.yaml'>statistics/histogram_score0.yaml</a>
         </td>
-        <td class="nowrap">1.92 KB</td>
-        <td class="nowrap">fb31e268452b0b747689bfddee2983ea</td>
+        <td class="nowrap">1.93 KB</td>
+        <td class="nowrap">c43f65ef7dfaa3bc01859805e2a95bd2</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -194,8 +195,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/histogram_score2.yaml'>statistics/histogram_score2.yaml</a>
         </td>
-        <td class="nowrap">2.17 KB</td>
-        <td class="nowrap">d7f319d30397172c90e8838d86cff3bb</td>
+        <td class="nowrap">2.18 KB</td>
+        <td class="nowrap">0dceb77ceb0956688c54a036385c3764</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -208,8 +209,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/histogram_score4.yaml'>statistics/histogram_score4.yaml</a>
         </td>
-        <td class="nowrap">2.22 KB</td>
-        <td class="nowrap">6759799a38b2956ccfd9bdb2523dd72b</td>
+        <td class="nowrap">2.24 KB</td>
+        <td class="nowrap">60509a941488070f75a83a46059ba871</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -236,8 +237,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/stats_hash'>statistics/stats_hash</a>
         </td>
-        <td class="nowrap">1.24 KB</td>
-        <td class="nowrap">a425d363e168abff82e2afc05203d621</td>
+        <td class="nowrap">1.33 KB</td>
+        <td class="nowrap">00d7f5923b6340ea44b59b4ae06fe2eb</td>
     </tr>
 </tbody>
 </table>
