--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/internal/scores_incomplete_coverage/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/internal/scores_incomplete_coverage/index.html
@@ -20,6 +20,10 @@ h3,h4 {
 <tr><td><b>Id:</b></td><td>hg19/internal/scores_incomplete_coverage</td></tr>
 <tr><td><b>Type:</b></td><td>position_score</td></tr>
 <tr>
+<td><b>Summary:</b></td>
+<td>N/A</td>
+</tr>
+<tr>
 <td><b>Description:</b></td>
 <td>N/A</td>
 </tr>
@@ -68,8 +72,7 @@ h3,h4 {
     title=score0_incomplete_cov
     width="200"></td>
 
-<td>
-(31776803.000, 140391002.000)</td>
+<td>(31776803.000, 140391002.000)</td>
 
 </tr>
 
@@ -134,8 +137,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/histogram_score0_incomplete_cov.yaml'>statistics/histogram_score0_incomplete_cov.yaml</a>
         </td>
-        <td class="nowrap">2.02 KB</td>
-        <td class="nowrap">6b367e4c544e539cbb0e4d68df063331</td>
+        <td class="nowrap">2.03 KB</td>
+        <td class="nowrap">ce77c864d30684328abf13c30e60759c</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -148,8 +151,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/stats_hash'>statistics/stats_hash</a>
         </td>
-        <td class="nowrap">693.0 B</td>
-        <td class="nowrap">2ed4cd199b638f2a9f3aa3f7ed0de0fb</td>
+        <td class="nowrap">896.0 B</td>
+        <td class="nowrap">47f9d185248c0851e71fb3ab1fcdb65f</td>
     </tr>
 </tbody>
 </table>
