--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/phastCons100/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/phastCons100/index.html
@@ -20,6 +20,10 @@ h3,h4 {
 <tr><td><b>Id:</b></td><td>hg19/phastCons100</td></tr>
 <tr><td><b>Type:</b></td><td>position_score</td></tr>
 <tr>
+<td><b>Summary:</b></td>
+<td>N/A</td>
+</tr>
+<tr>
 <td><b>Description:</b></td>
 <td>N/A</td>
 </tr>
@@ -68,8 +72,7 @@ h3,h4 {
     title=phastCons100
     width="200"></td>
 
-<td>
-(0.000, 1.000)</td>
+<td>(0.000, 1.000)</td>
 
 </tr>
 
@@ -92,8 +95,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='genomic_resource.yaml'>genomic_resource.yaml</a>
         </td>
-        <td class="nowrap">499.0 B</td>
-        <td class="nowrap">434e54042feda78eddac3041e740cb67</td>
+        <td class="nowrap">516.0 B</td>
+        <td class="nowrap">dae62103e1256179406f5b4e086c8d53</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -113,15 +116,15 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/histogram_phastCons100.png'>statistics/histogram_phastCons100.png</a>
         </td>
-        <td class="nowrap">16.9 KB</td>
-        <td class="nowrap">54bd7b1671e0dfc71711de85b79a160d</td>
+        <td class="nowrap">14.07 KB</td>
+        <td class="nowrap">efcdd4628dbf6987139798f1c30e21e3</td>
     </tr>
     <tr>
         <td class="nowrap">
             <a href='statistics/histogram_phastCons100.yaml'>statistics/histogram_phastCons100.yaml</a>
         </td>
-        <td class="nowrap">1.6 KB</td>
-        <td class="nowrap">3eefb342edbc969d4741bc91ae269202</td>
+        <td class="nowrap">344.0 B</td>
+        <td class="nowrap">1d62d066c704867e1d15cea8bd81109e</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -134,8 +137,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/stats_hash'>statistics/stats_hash</a>
         </td>
-        <td class="nowrap">719.0 B</td>
-        <td class="nowrap">ea99d5f829c059c212e735db1fc5889c</td>
+        <td class="nowrap">1.66 KB</td>
+        <td class="nowrap">5950bd9d8f7c8c0408238c3e705e2c9a</td>
     </tr>
 </tbody>
 </table>
