--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/GRCh38-hg38/genome/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/GRCh38-hg38/genome/index.html
@@ -20,6 +20,13 @@ h3,h4 {
 <tr><td><b>Id:</b></td><td>hg38/GRCh38-hg38/genome</td></tr>
 <tr><td><b>Type:</b></td><td>genome</td></tr>
 <tr>
+<td><b>Summary:</b></td>
+<td>## HG38 Reference Genome 
+
+Default HG38 reference genome used by GPF
+</td>
+</tr>
+<tr>
 <td><b>Description:</b></td>
 <td><h2>HG38 Reference Genome</h2>
 
