--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTCADD/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTCADD/index.html
@@ -20,6 +20,10 @@ h3,h4 {
 <tr><td><b>Id:</b></td><td>hg38/TESTCADD</td></tr>
 <tr><td><b>Type:</b></td><td>np_score</td></tr>
 <tr>
+<td><b>Summary:</b></td>
+<td>N/A</td>
+</tr>
+<tr>
 <td><b>Description:</b></td>
 <td>N/A</td>
 </tr>
@@ -68,8 +72,7 @@ h3,h4 {
     title=cadd_raw
     width="200"></td>
 
-<td>
-(0.363, 0.558)</td>
+<td>(0.363, 0.558)</td>
 
 </tr><tr class="score-definition">
 
@@ -91,8 +94,7 @@ h3,h4 {
     title=cadd_phred
     width="200"></td>
 
-<td>
-(6.202, 8.178)</td>
+<td>(6.202, 8.178)</td>
 
 </tr>
 
@@ -143,8 +145,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/histogram_cadd_phred.yaml'>statistics/histogram_cadd_phred.yaml</a>
         </td>
-        <td class="nowrap">1.91 KB</td>
-        <td class="nowrap">924a483f8fc0030feb967b767c63da26</td>
+        <td class="nowrap">1.93 KB</td>
+        <td class="nowrap">738f534dfdecf037b6d3cb49c1fc9aa4</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -157,8 +159,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/histogram_cadd_raw.yaml'>statistics/histogram_cadd_raw.yaml</a>
         </td>
-        <td class="nowrap">2.01 KB</td>
-        <td class="nowrap">8b5f04256c3997febe6fc166df8123f7</td>
+        <td class="nowrap">2.02 KB</td>
+        <td class="nowrap">366d1aad1b3ca6967bc8364eddcf7fb4</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -178,8 +180,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/stats_hash'>statistics/stats_hash</a>
         </td>
-        <td class="nowrap">1.04 KB</td>
-        <td class="nowrap">5bcf6eb7accf7c4f5246d18ff227e631</td>
+        <td class="nowrap">1.18 KB</td>
+        <td class="nowrap">59d56ca292d980dc7f33f115ccb7d957</td>
     </tr>
 </tbody>
 </table>
