--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTFreq/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTFreq/index.html
@@ -20,6 +20,10 @@ h3,h4 {
 <tr><td><b>Id:</b></td><td>hg38/TESTFreq</td></tr>
 <tr><td><b>Type:</b></td><td>allele_score</td></tr>
 <tr>
+<td><b>Summary:</b></td>
+<td>N/A</td>
+</tr>
+<tr>
 <td><b>Description:</b></td>
 <td>N/A</td>
 </tr>
@@ -68,8 +72,7 @@ h3,h4 {
     title=altFreq
     width="200"></td>
 
-<td>
-(0.100, 9.423)</td>
+<td>(0.100, 9.423)</td>
 
 </tr><tr class="score-definition">
 
@@ -91,8 +94,7 @@ h3,h4 {
     title=altFreq2
     width="200"></td>
 
-<td>
-(0.800, 10.435)</td>
+<td>(0.800, 10.435)</td>
 
 </tr>
 
@@ -143,8 +145,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/histogram_altFreq.yaml'>statistics/histogram_altFreq.yaml</a>
         </td>
-        <td class="nowrap">2.01 KB</td>
-        <td class="nowrap">bb158934e911de793f04995cf66af066</td>
+        <td class="nowrap">2.02 KB</td>
+        <td class="nowrap">23f58702004a5e87f2cb7126d6f93ecd</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -157,8 +159,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/histogram_altFreq2.yaml'>statistics/histogram_altFreq2.yaml</a>
         </td>
-        <td class="nowrap">1.96 KB</td>
-        <td class="nowrap">67b6f45f6d5da949b0d63ee998784963</td>
+        <td class="nowrap">1.97 KB</td>
+        <td class="nowrap">3babd16dc632bd0a1bcc72e2be7f4dad</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -178,8 +180,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/stats_hash'>statistics/stats_hash</a>
         </td>
-        <td class="nowrap">1.05 KB</td>
-        <td class="nowrap">0927bef520ed6137c75bed3ec41494ba</td>
+        <td class="nowrap">1.19 KB</td>
+        <td class="nowrap">4abfa26113b54aa0d20c63eaf85ade36</td>
     </tr>
 </tbody>
 </table>
