--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTPosAgg/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTPosAgg/index.html
@@ -20,6 +20,10 @@ h3,h4 {
 <tr><td><b>Id:</b></td><td>hg38/TESTPosAgg</td></tr>
 <tr><td><b>Type:</b></td><td>position_score</td></tr>
 <tr>
+<td><b>Summary:</b></td>
+<td>N/A</td>
+</tr>
+<tr>
 <td><b>Description:</b></td>
 <td>N/A</td>
 </tr>
@@ -68,8 +72,7 @@ h3,h4 {
     title=test_score
     width="200"></td>
 
-<td>
-(0.000, 0.010)</td>
+<td>(0.000, 0.010)</td>
 
 </tr>
 
@@ -120,8 +123,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/histogram_test_score.yaml'>statistics/histogram_test_score.yaml</a>
         </td>
-        <td class="nowrap">1.88 KB</td>
-        <td class="nowrap">0ac24ada061f2988ad32d2d60d4369dc</td>
+        <td class="nowrap">1.89 KB</td>
+        <td class="nowrap">efd2e07998e1a2b6822ce8113ec7326c</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -134,8 +137,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/stats_hash'>statistics/stats_hash</a>
         </td>
-        <td class="nowrap">733.0 B</td>
-        <td class="nowrap">3562159b1457c261d3e74263ae3f5447</td>
+        <td class="nowrap">880.0 B</td>
+        <td class="nowrap">60890e4834d0f6f3d75437d9fda05097</td>
     </tr>
 </tbody>
 </table>
