--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTphastCons100way/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTphastCons100way/index.html
@@ -20,6 +20,10 @@ h3,h4 {
 <tr><td><b>Id:</b></td><td>hg38/TESTphastCons100way</td></tr>
 <tr><td><b>Type:</b></td><td>position_score</td></tr>
 <tr>
+<td><b>Summary:</b></td>
+<td>N/A</td>
+</tr>
+<tr>
 <td><b>Description:</b></td>
 <td>N/A</td>
 </tr>
@@ -68,8 +72,7 @@ h3,h4 {
     title=phastCons100way
     width="200"></td>
 
-<td>
-(0.000, 0.253)</td>
+<td>(0.000, 0.253)</td>
 
 </tr>
 
@@ -106,8 +109,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='genomic_resource.yaml'>genomic_resource.yaml</a>
         </td>
-        <td class="nowrap">656.0 B</td>
-        <td class="nowrap">5202483f3106c876390d5af44902fa00</td>
+        <td class="nowrap">673.0 B</td>
+        <td class="nowrap">e7d8b331eb152fad5029bba14d170f4f</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -148,8 +151,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/histogram_phastCons100way.yaml'>statistics/histogram_phastCons100way.yaml</a>
         </td>
-        <td class="nowrap">295.0 B</td>
-        <td class="nowrap">50f50d296a496786a02583e5b29be09f</td>
+        <td class="nowrap">310.0 B</td>
+        <td class="nowrap">da2eb0f73da877f98766eec142601ba6</td>
     </tr>
     <tr>
         <td class="nowrap">
@@ -162,8 +165,8 @@ h3,h4 {
         <td class="nowrap">
             <a href='statistics/stats_hash'>statistics/stats_hash</a>
         </td>
-        <td class="nowrap">920.0 B</td>
-        <td class="nowrap">5ad5b6522430ce18d0233deb59e19d3c</td>
+        <td class="nowrap">1.7 KB</td>
+        <td class="nowrap">b1490f2761eff71bbfad9b4e26c3f37e</td>
     </tr>
 </tbody>
 </table>
