--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/index.html
@@ -34,7 +34,7 @@
                 <th>Version</th>
                 <th>Number of files</th>
                 <th>Size in bytes (total)</th>
-                <th>Meta</th>
+                <th>Summary</th>
             </tr>
         </thead>
         <tbody>
@@ -46,11 +46,7 @@
                 <td class="nowrap">0</td>
                 <td class="nowrap">10</td>
                 <td class="nowrap">17.65 MB</td>
-                <td>
-                    <div class="meta-div">
-                        None
-                    </div>
-                </td>
+                <td class="nowrap"></td>
             </tr>
             <tr>
                 <td class="nowrap">gene_models</td>
@@ -58,16 +54,12 @@
                     <a href='hg19/GATK_ResourceBundle_5777_b37_phiX174_short/gene_models/refGene_201309/index.html'>hg19/GATK_ResourceBundle_5777_b37_phiX174_short/gene_models/refGene_201309</a>
                 </td>
                 <td class="nowrap">0</td>
-                <td class="nowrap">3</td>
-                <td class="nowrap">3.87 KB</td>
-                <td>
-                    <div class="meta-div">
-                        <h2>refGene gene models from 2013-09</h2>
+                <td class="nowrap">4</td>
+                <td class="nowrap">4.18 KB</td>
+                <td class="nowrap">## refGene gene models from 2013-09
 
-<p>Old gene models used by GPF up to 2019-02.</p>
-
-                    </div>
-                </td>
+Old gene models used by GPF up to 2019-02.
+</td>
             </tr>
             <tr>
                 <td class="nowrap">genome</td>
@@ -77,14 +69,10 @@
                 <td class="nowrap">0</td>
                 <td class="nowrap">8</td>
                 <td class="nowrap">895.6 KB</td>
-                <td>
-                    <div class="meta-div">
-                        <h2>HG19 Reference Genome Fragment</h2>
+                <td class="nowrap">## HG19 Reference Genome Fragment
 
-<p>Default HG19 reference genome used by GPF</p>
-
-                    </div>
-                </td>
+Default HG19 reference genome used by GPF
+</td>
             </tr>
             <tr>
                 <td class="nowrap">np_score</td>
@@ -93,12 +81,8 @@
                 </td>
                 <td class="nowrap">0</td>
                 <td class="nowrap">10</td>
-                <td class="nowrap">431.19 KB</td>
-                <td>
-                    <div class="meta-div">
-                        None
-                    </div>
-                </td>
+                <td class="nowrap">435.11 KB</td>
+                <td class="nowrap"></td>
             </tr>
             <tr>
                 <td class="nowrap">position_score</td>
@@ -107,12 +91,8 @@
                 </td>
                 <td class="nowrap">0</td>
                 <td class="nowrap">15</td>
-                <td class="nowrap">42.28 KB</td>
-                <td>
-                    <div class="meta-div">
-                        None
-                    </div>
-                </td>
+                <td class="nowrap">42.42 KB</td>
+                <td class="nowrap"></td>
             </tr>
             <tr>
                 <td class="nowrap">position_score</td>
@@ -121,12 +101,8 @@
                 </td>
                 <td class="nowrap">0</td>
                 <td class="nowrap">9</td>
-                <td class="nowrap">21.69 KB</td>
-                <td>
-                    <div class="meta-div">
-                        None
-                    </div>
-                </td>
+                <td class="nowrap">21.91 KB</td>
+                <td class="nowrap"></td>
             </tr>
             <tr>
                 <td class="nowrap">position_score</td>
@@ -135,12 +111,8 @@
                 </td>
                 <td class="nowrap">0</td>
                 <td class="nowrap">7</td>
-                <td class="nowrap">2.46 MB</td>
-                <td>
-                    <div class="meta-div">
-                        None
-                    </div>
-                </td>
+                <td class="nowrap">2.45 MB</td>
+                <td class="nowrap"></td>
             </tr>
             <tr>
                 <td class="nowrap">gene_models</td>
@@ -148,16 +120,12 @@
                     <a href='hg38/GRCh38-hg38/gene_models/refSeq_20200330/index.html'>hg38/GRCh38-hg38/gene_models/refSeq_20200330</a>
                 </td>
                 <td class="nowrap">0</td>
-                <td class="nowrap">3</td>
-                <td class="nowrap">30.05 KB</td>
-                <td>
-                    <div class="meta-div">
-                        <h2>refSeq gene models for HG38 from 2020-03</h2>
+                <td class="nowrap">4</td>
+                <td class="nowrap">30.34 KB</td>
+                <td class="nowrap">## refSeq gene models for HG38 from 2020-03
 
-<p>Default gene models used by GPF for HG38.</p>
-
-                    </div>
-                </td>
+Default gene models used by GPF for HG38.
+</td>
             </tr>
             <tr>
                 <td class="nowrap">genome</td>
@@ -167,14 +135,10 @@
                 <td class="nowrap">0</td>
                 <td class="nowrap">7</td>
                 <td class="nowrap">2.71 MB</td>
-                <td>
-                    <div class="meta-div">
-                        <h2>HG38 Reference Genome</h2>
+                <td class="nowrap">## HG38 Reference Genome 
 
-<p>Default HG38 reference genome used by GPF</p>
-
-                    </div>
-                </td>
+Default HG38 reference genome used by GPF
+</td>
             </tr>
             <tr>
                 <td class="nowrap">np_score</td>
@@ -183,12 +147,8 @@
                 </td>
                 <td class="nowrap">0</td>
                 <td class="nowrap">10</td>
-                <td class="nowrap">34.43 KB</td>
-                <td>
-                    <div class="meta-div">
-                        None
-                    </div>
-                </td>
+                <td class="nowrap">34.6 KB</td>
+                <td class="nowrap"></td>
             </tr>
             <tr>
                 <td class="nowrap">allele_score</td>
@@ -197,12 +157,8 @@
                 </td>
                 <td class="nowrap">0</td>
                 <td class="nowrap">10</td>
-                <td class="nowrap">26.86 KB</td>
-                <td>
-                    <div class="meta-div">
-                        None
-                    </div>
-                </td>
+                <td class="nowrap">27.03 KB</td>
+                <td class="nowrap"></td>
             </tr>
             <tr>
                 <td class="nowrap">position_score</td>
@@ -211,12 +167,8 @@
                 </td>
                 <td class="nowrap">0</td>
                 <td class="nowrap">7</td>
-                <td class="nowrap">15.21 KB</td>
-                <td>
-                    <div class="meta-div">
-                        None
-                    </div>
-                </td>
+                <td class="nowrap">15.37 KB</td>
+                <td class="nowrap"></td>
             </tr>
             <tr>
                 <td class="nowrap">position_score</td>
@@ -225,12 +177,8 @@
                 </td>
                 <td class="nowrap">0</td>
                 <td class="nowrap">11</td>
-                <td class="nowrap">22.75 KB</td>
-                <td>
-                    <div class="meta-div">
-                        None
-                    </div>
-                </td>
+                <td class="nowrap">23.58 KB</td>
+                <td class="nowrap"></td>
             </tr>
             <tr>
                 <td class="nowrap">liftover_chain</td>
@@ -240,11 +188,7 @@
                 <td class="nowrap">0</td>
                 <td class="nowrap">3</td>
                 <td class="nowrap">1.19 MB</td>
-                <td>
-                    <div class="meta-div">
-                        None
-                    </div>
-                </td>
+                <td class="nowrap"></td>
             </tr>
         </tbody>
      </table>
