More flexible configuration of histograms.

--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/CADD/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/CADD/index.html
@@ -136,6 +136,13 @@ h3,h4 {
     </tr>
     <tr>
         <td class="nowrap">
+            <a href='index.html'>index.html</a>
+        </td>
+        <td class="nowrap">3.72 KB</td>
+        <td class="nowrap">baae95d247c148c7027dc2dbcb7e75b2</td>
+    </tr>
+    <tr>
+        <td class="nowrap">
             <a href='statistics/histogram_cadd_phred.png'>statistics/histogram_cadd_phred.png</a>
         </td>
         <td class="nowrap">18.54 KB</td>
