--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/GATK_ResourceBundle_5777_b37_phiX174_short/gene_models/refGene_201309/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/GATK_ResourceBundle_5777_b37_phiX174_short/gene_models/refGene_201309/index.html
@@ -93,6 +93,13 @@ Old gene models used by GPF up to 2019-02.
     </tr>
     <tr>
         <td class="nowrap">
+            <a href='index.html'>index.html</a>
+        </td>
+        <td class="nowrap">2.43 KB</td>
+        <td class="nowrap">c1bb65c548a6208471b5c844207b491c</td>
+    </tr>
+    <tr>
+        <td class="nowrap">
             <a href='refGene201309.txt'>refGene201309.txt</a>
         </td>
         <td class="nowrap">3.67 KB</td>
