--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/MPC/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/MPC/index.html
@@ -135,6 +135,13 @@ h3,h4 {
     </tr>
     <tr>
         <td class="nowrap">
+            <a href='index.html'>index.html</a>
+        </td>
+        <td class="nowrap">3.44 KB</td>
+        <td class="nowrap">091af24e3bac5182ee190361278983dd</td>
+    </tr>
+    <tr>
+        <td class="nowrap">
             <a href='statistics/histogram_MPC.png'>statistics/histogram_MPC.png</a>
         </td>
         <td class="nowrap">10.01 KB</td>
