--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/internal/scores1/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/internal/scores1/index.html
@@ -151,6 +151,13 @@ h3,h4 {
     </tr>
     <tr>
         <td class="nowrap">
+            <a href='index.html'>index.html</a>
+        </td>
+        <td class="nowrap">5.12 KB</td>
+        <td class="nowrap">4f3be32d08e2b88557366215077f030d</td>
+    </tr>
+    <tr>
+        <td class="nowrap">
             <a href='scores1.tsv.gz'>scores1.tsv.gz</a>
         </td>
         <td class="nowrap">367.0 B</td>
