--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/internal/scores_incomplete_coverage/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/internal/scores_incomplete_coverage/index.html
@@ -107,6 +107,13 @@ h3,h4 {
     </tr>
     <tr>
         <td class="nowrap">
+            <a href='index.html'>index.html</a>
+        </td>
+        <td class="nowrap">3.4 KB</td>
+        <td class="nowrap">b017f9154b86bc69c9a58a73de54b73e</td>
+    </tr>
+    <tr>
+        <td class="nowrap">
             <a href='scores_incomplete_coverage.tsv.gz'>scores_incomplete_coverage.tsv.gz</a>
         </td>
         <td class="nowrap">176.0 B</td>
