--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/phastCons100/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/phastCons100/index.html
@@ -100,6 +100,13 @@ h3,h4 {
     </tr>
     <tr>
         <td class="nowrap">
+            <a href='index.html'>index.html</a>
+        </td>
+        <td class="nowrap">2.77 KB</td>
+        <td class="nowrap">53b1b48c1a27fd0ffa78be32cb281399</td>
+    </tr>
+    <tr>
+        <td class="nowrap">
             <a href='phastCons100.bedGraph.gz'>phastCons100.bedGraph.gz</a>
         </td>
         <td class="nowrap">2.44 MB</td>
