--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/GRCh38-hg38/gene_models/refSeq_20200330/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/GRCh38-hg38/gene_models/refSeq_20200330/index.html
@@ -91,6 +91,13 @@ Default gene models used by GPF for HG38.
     </tr>
     <tr>
         <td class="nowrap">
+            <a href='index.html'>index.html</a>
+        </td>
+        <td class="nowrap">2.37 KB</td>
+        <td class="nowrap">cd8fee7ba4ad330cda808343de083487</td>
+    </tr>
+    <tr>
+        <td class="nowrap">
             <a href='refSeq_20200330.txt'>refSeq_20200330.txt</a>
         </td>
         <td class="nowrap">29.84 KB</td>
