--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/GRCh38-hg38/genome/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/GRCh38-hg38/genome/index.html
@@ -171,6 +171,13 @@ Default HG38 reference genome used by GPF
     </tr>
     <tr>
         <td class="nowrap">
+            <a href='index.html'>index.html</a>
+        </td>
+        <td class="nowrap">3.66 KB</td>
+        <td class="nowrap">4ebd6fa960ce41571a47bd383f0f22f1</td>
+    </tr>
+    <tr>
+        <td class="nowrap">
             <a href='statistics/chr1_statistic.yaml'>statistics/chr1_statistic.yaml</a>
         </td>
         <td class="nowrap">324.0 B</td>
