--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTCADD/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTCADD/index.html
@@ -136,6 +136,13 @@ h3,h4 {
     </tr>
     <tr>
         <td class="nowrap">
+            <a href='index.html'>index.html</a>
+        </td>
+        <td class="nowrap">3.72 KB</td>
+        <td class="nowrap">519130f4d8dd9b760342b33453dd383e</td>
+    </tr>
+    <tr>
+        <td class="nowrap">
             <a href='statistics/histogram_cadd_phred.png'>statistics/histogram_cadd_phred.png</a>
         </td>
         <td class="nowrap">14.12 KB</td>
