--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTPosAgg/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTPosAgg/index.html
@@ -100,6 +100,13 @@ h3,h4 {
     </tr>
     <tr>
         <td class="nowrap">
+            <a href='index.html'>index.html</a>
+        </td>
+        <td class="nowrap">2.69 KB</td>
+        <td class="nowrap">196e57321f0aeb39f08ad6b3997a8649</td>
+    </tr>
+    <tr>
+        <td class="nowrap">
             <a href='scores.tsv.gz'>scores.tsv.gz</a>
         </td>
         <td class="nowrap">107.0 B</td>
