--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTphastCons100way/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTphastCons100way/index.html
@@ -135,6 +135,13 @@ h3,h4 {
     </tr>
     <tr>
         <td class="nowrap">
+            <a href='index.html'>index.html</a>
+        </td>
+        <td class="nowrap">3.85 KB</td>
+        <td class="nowrap">ad8610b2b28d1dc19c29df4d2dc69350</td>
+    </tr>
+    <tr>
+        <td class="nowrap">
             <a href='scores/phastCons100way.yaml'>scores/phastCons100way.yaml</a>
         </td>
         <td class="nowrap">583.0 B</td>
