--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/hg38tohg19/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/hg38tohg19/index.html
@@ -77,6 +77,13 @@ hg38ToHg19.over.chain.gz
     </tr>
     <tr>
         <td class="nowrap">
+            <a href='index.html'>index.html</a>
+        </td>
+        <td class="nowrap">1.47 KB</td>
+        <td class="nowrap">f3e74a1b862a62264d35ca4880294540</td>
+    </tr>
+    <tr>
+        <td class="nowrap">
             <a href='statistics/stats_hash'>statistics/stats_hash</a>
         </td>
         <td class="nowrap">11.0 B</td>
