--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/GATK_ResourceBundle_5777_b37_phiX174_short/genome/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/GATK_ResourceBundle_5777_b37_phiX174_short/genome/index.html
@@ -174,6 +174,13 @@ Default HG19 reference genome used by GPF
     </tr>
     <tr>
         <td class="nowrap">
+            <a href='index.html'>index.html</a>
+        </td>
+        <td class="nowrap">3.82 KB</td>
+        <td class="nowrap">480bea600c85e87dd69daa97c54bafbc</td>
+    </tr>
+    <tr>
+        <td class="nowrap">
             <a href='statistics/1_statistic.yaml'>statistics/1_statistic.yaml</a>
         </td>
         <td class="nowrap">313.0 B</td>
