--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTFreq/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTFreq/index.html
@@ -136,6 +136,13 @@ h3,h4 {
     </tr>
     <tr>
         <td class="nowrap">
+            <a href='index.html'>index.html</a>
+        </td>
+        <td class="nowrap">3.69 KB</td>
+        <td class="nowrap">82b1b14a035032bfad67c1748013998a</td>
+    </tr>
+    <tr>
+        <td class="nowrap">
             <a href='statistics/histogram_altFreq.png'>statistics/histogram_altFreq.png</a>
         </td>
         <td class="nowrap">10.3 KB</td>
