Reorganization of histograms for genomic scores.

--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/MPC/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/MPC/index.html
@@ -72,7 +72,7 @@ h3,h4 {
     title=MPC
     width="200"></td>
 
-<td>(0.039, 4.618)</td>
+<td>NO RANGE</td>
 
 </tr>
 
@@ -132,41 +132,6 @@ h3,h4 {
         </td>
         <td class="nowrap">8.46 KB</td>
         <td class="nowrap">558273e259dee3322accc97e92e9d7d1</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='index.html'>index.html</a>
-        </td>
-        <td class="nowrap">3.65 KB</td>
-        <td class="nowrap">fa8c8deda10343fe82895350aad14581</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/histogram_MPC.png'>statistics/histogram_MPC.png</a>
-        </td>
-        <td class="nowrap">10.01 KB</td>
-        <td class="nowrap">c5bccdbfe3dc20fc06699476cfd3e5ca</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/histogram_MPC.yaml'>statistics/histogram_MPC.yaml</a>
-        </td>
-        <td class="nowrap">1.86 KB</td>
-        <td class="nowrap">9448bfc27262aeebe9ced0cc07a28ec2</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/min_max_MPC.yaml'>statistics/min_max_MPC.yaml</a>
-        </td>
-        <td class="nowrap">54.0 B</td>
-        <td class="nowrap">5416e76393b5da61c3eefd628ca67fe3</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/stats_hash'>statistics/stats_hash</a>
-        </td>
-        <td class="nowrap">4.95 KB</td>
-        <td class="nowrap">6a66d8328eea3542b302d0b403a9569e</td>
     </tr>
 </tbody>
 </table>
