--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/phastCons100/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/phastCons100/index.html
@@ -72,7 +72,7 @@ h3,h4 {
     title=phastCons100
     width="200"></td>
 
-<td>(0.000, 1.000)</td>
+<td>NO RANGE</td>
 
 </tr>
 
@@ -100,13 +100,6 @@ h3,h4 {
     </tr>
     <tr>
         <td class="nowrap">
-            <a href='index.html'>index.html</a>
-        </td>
-        <td class="nowrap">2.98 KB</td>
-        <td class="nowrap">25796f19e7a12dee3b6c9d30d563cf0f</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
             <a href='phastCons100.bedGraph.gz'>phastCons100.bedGraph.gz</a>
         </td>
         <td class="nowrap">2.44 MB</td>
@@ -118,34 +111,6 @@ h3,h4 {
         </td>
         <td class="nowrap">622.0 B</td>
         <td class="nowrap">c2c4b109900b9f5ea940563bab3a8ad7</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/histogram_phastCons100.png'>statistics/histogram_phastCons100.png</a>
-        </td>
-        <td class="nowrap">14.07 KB</td>
-        <td class="nowrap">efcdd4628dbf6987139798f1c30e21e3</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/histogram_phastCons100.yaml'>statistics/histogram_phastCons100.yaml</a>
-        </td>
-        <td class="nowrap">401.0 B</td>
-        <td class="nowrap">286cd0a9c0d64cc61f8cac80f57efc9f</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/min_max_phastCons100.yaml'>statistics/min_max_phastCons100.yaml</a>
-        </td>
-        <td class="nowrap">41.0 B</td>
-        <td class="nowrap">d97dfb28934fa829a2750ecc06bb247d</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/stats_hash'>statistics/stats_hash</a>
-        </td>
-        <td class="nowrap">1.78 KB</td>
-        <td class="nowrap">23baccc6c8276450e478ca40cc927b5f</td>
     </tr>
 </tbody>
 </table>
