--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTphastCons100way/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTphastCons100way/index.html
@@ -72,7 +72,7 @@ h3,h4 {
     title=phastCons100way
     width="200"></td>
 
-<td>(0.000, 0.253)</td>
+<td>NO RANGE</td>
 
 </tr>
 
@@ -135,45 +135,10 @@ h3,h4 {
     </tr>
     <tr>
         <td class="nowrap">
-            <a href='index.html'>index.html</a>
-        </td>
-        <td class="nowrap">4.06 KB</td>
-        <td class="nowrap">cb5941f387c8c9819ccecbe1b988518a</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
             <a href='scores/phastCons100way.yaml'>scores/phastCons100way.yaml</a>
         </td>
         <td class="nowrap">583.0 B</td>
         <td class="nowrap">56feb878ed78769d5200702392b8e4b7</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/histogram_phastCons100way.png'>statistics/histogram_phastCons100way.png</a>
-        </td>
-        <td class="nowrap">11.59 KB</td>
-        <td class="nowrap">7253f59314b3cdec0fe36f4d19a79410</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/histogram_phastCons100way.yaml'>statistics/histogram_phastCons100way.yaml</a>
-        </td>
-        <td class="nowrap">369.0 B</td>
-        <td class="nowrap">c73ad2e03b5fa160efbaf5088fbc7ce9</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/min_max_phastCons100way.yaml'>statistics/min_max_phastCons100way.yaml</a>
-        </td>
-        <td class="nowrap">46.0 B</td>
-        <td class="nowrap">98ddd26b76ce999ec1f212448880f698</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/stats_hash'>statistics/stats_hash</a>
-        </td>
-        <td class="nowrap">1.81 KB</td>
-        <td class="nowrap">ec6ef0fc4f0adf2cc3de739359f984cf</td>
     </tr>
 </tbody>
 </table>
